Fixed overflow issue of shopping cart and route changed for logout btn

--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -109,7 +109,9 @@
 #cartBody{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
+    max-height: 400px;
+    overflow-y: scroll;
     gap:10px;
 }
